[gd_scene load_steps=41 format=2]

[ext_resource path="res://environment/tilesets/grass_dirt.png" type="Texture" id=1]
[ext_resource path="res://scenes/characters/Auntie.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/maps/MapBase.gd" type="Script" id=3]
[ext_resource path="res://scenes/gui/CountDownLabel.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/gui/ending_screen-left.png" type="Texture" id=6]
[ext_resource path="res://assets/gui/ending_screen-right.png" type="Texture" id=7]
[ext_resource path="res://assets/OpenDyslexic3-Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 32, 32, 4, 32, 4, 8, 32, 8 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 32, 32, 0, 32, 0, 8, 32, 8 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 28, 32, 0, 32, 0, 8, 28, 8 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 32, 32, 4, 32, 4, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 28, 32, 0, 32, 0, 0, 28, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 28, 28, 0, 28, 0, 0, 28, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 32, 28, 0, 28, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 32, 28, 4, 28, 4, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 28, 32, 4, 32, 4, 8, 28, 8 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 28, 32, 4, 32, 4, 0, 28, 0 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 28, 28, 4, 28, 4, 0, 28, 0 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 32, 28, 4, 28, 4, 8, 32, 8 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 32, 28, 0, 28, 0, 8, 32, 8 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 28, 28, 0, 28, 0, 8, 28, 8 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 28, 28, 4, 28, 4, 8, 28, 8 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 28, 32, 4, 32, 4, 8, 28, 8 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 28, 8, 32, 8, 32, 28, 28, 28 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 32, 28, 0, 28, 0, 8, 32, 8 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 0, 28, 28, 28, 28, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 32, 28, 0, 28, 0, 8, 32, 8 )

[sub_resource type="ConvexPolygonShape2D" id=22]
points = PoolVector2Array( 32, 32, 4, 32, 4, 28, 32, 28 )

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( 28, 28, 0, 28, 0, 8, 28, 8 )

[sub_resource type="ConvexPolygonShape2D" id=24]
points = PoolVector2Array( 4, 28, 28, 28, 28, 32, 4, 32 )

[sub_resource type="ConvexPolygonShape2D" id=25]
points = PoolVector2Array( 28, 28, 0, 28, 0, 0, 28, 0 )

[sub_resource type="ConvexPolygonShape2D" id=26]
points = PoolVector2Array( 4, 28, 28, 28, 28, 32, 4, 32 )

[sub_resource type="ConvexPolygonShape2D" id=27]
points = PoolVector2Array( 32, 28, 4, 28, 4, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=28]
points = PoolVector2Array( 28, 32, 4, 32, 4, 28, 28, 28 )

[sub_resource type="TileSet" id=29]
0/name = "grass_dirt.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 352, 160 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 0, 3 ), 48, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 1, 3 ), 56, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 2, 3 ), 24, Vector2( 3, 0 ), 144, Vector2( 3, 1 ), 146, Vector2( 3, 2 ), 18, Vector2( 3, 3 ), 16, Vector2( 4, 0 ), 176, Vector2( 4, 1 ), 182, Vector2( 4, 2 ), 434, Vector2( 4, 3 ), 50, Vector2( 4, 4 ), 178, Vector2( 5, 0 ), 248, Vector2( 5, 1 ), 255, Vector2( 5, 2 ), 507, Vector2( 5, 3 ), 59, Vector2( 5, 4 ), 251, Vector2( 6, 0 ), 440, Vector2( 6, 1 ), 447, Vector2( 6, 2 ), 510, Vector2( 6, 3 ), 62, Vector2( 6, 4 ), 446, Vector2( 7, 0 ), 152, Vector2( 7, 1 ), 155, Vector2( 7, 2 ), 218, Vector2( 7, 3 ), 26, Vector2( 7, 4 ), 154, Vector2( 8, 0 ), 184, Vector2( 8, 1 ), 191, Vector2( 8, 2 ), 506, Vector2( 8, 3 ), 58, Vector2( 8, 4 ), 186, Vector2( 9, 0 ), 443, Vector2( 9, 1 ), 254, Vector2( 9, 2 ), 442, Vector2( 9, 3 ), 190, Vector2( 10, 2 ), 250, Vector2( 10, 3 ), 187 ]
0/autotile/icon_coordinate = Vector2( 3, 3 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 6, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 22 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 24 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 25 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 7, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 26 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 27 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 28 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="DynamicFont" id=30]
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=31]
default_font = SubResource( 30 )

[sub_resource type="Animation" id=32]
tracks/0/type = "value"
tracks/0/path = NodePath("LeftImage:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ Vector2( -240, -10 ), Vector2( -64, -10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightImage:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ Vector2( 350, -10 ), Vector2( 157, -10 ) ]
}

[sub_resource type="Animation" id=33]
resource_name = "Reset"
tracks/0/type = "value"
tracks/0/path = NodePath("LeftImage:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -240, -10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightImage:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 350, -10 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../..:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="MapBase" type="Node2D"]
script = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 29 )
cell_size = Vector2( 32, 32 )
collision_mask = 0
format = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 154.706, 0.388706 )
rotating = true
current = true
smoothing_enabled = true
offset_v = -1.0

[node name="Auntie" parent="." instance=ExtResource( 2 )]
position = Vector2( 28.3937, 4.54175 )

[node name="Exits" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]
position = Vector2( -0.503891, -3.96825 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Root" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 31 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Root"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="MainContainer" type="Control" parent="CanvasLayer/Root/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 350.0
margin_bottom = 192.0

[node name="CountDownLabel" parent="CanvasLayer/Root/MarginContainer/MainContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 132.0
margin_bottom = 28.0
align = 0

[node name="DeathVisual" type="Control" parent="CanvasLayer/Root/MarginContainer/MainContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftImage" type="TextureRect" parent="CanvasLayer/Root/MarginContainer/MainContainer/DeathVisual"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -10.0
margin_right = -130.0
margin_bottom = 172.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightImage" type="TextureRect" parent="CanvasLayer/Root/MarginContainer/MainContainer/DeathVisual"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 350.0
margin_top = -10.0
margin_right = 460.0
margin_bottom = 172.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Root/MarginContainer/MainContainer/DeathVisual"]
autoplay = "Reset"
anims/Death = SubResource( 32 )
anims/Reset = SubResource( 33 )
